# taover-rs

./: .gitignore  .gitmodules  Cargo.toml
overlay/: Cargo.toml  rust-toolchain
overlay/src/: lib.rs  ta.rs  web.rs
overlay/src/proto/: discord.proto  discord.rs  mod.rs  models.proto  models.rs  packet.rs  packets.proto  proto.discord.rs  proto.models.rs  proto.packet.rs
overlay/src/web/: main.rs  mod.rs
overlay/static/: index.html
overlay/static/style/: starting.css
xtask/: Cargo.toml
xtask/src/: main.rs
