[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# quick-protobuf = "0.8.1" jank.
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
wasm-bindgen = "0.2.83"
wasm-timer = "0.2.5"
# ws = "0.9.2" cant be used on wasm targets due to net2
yew = "0.19.3"
js-sys = "0.3.60"
yew-router = "0.17.0"
lazy_static = "1.4.0"
yew-websocket = "0.1.1"
anyhow = "1.0.68"
prost = "0.11.6"
gloo = "0.8.0"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "Window",
    "Document"
]

[dev-dependencies]
xtask-wasm = "0.1.1"
